--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ botocore==1.23.14
 certifi==2021.10.8
 charset-normalizer==2.0.8
 cycler==0.11.0
+dnspython==2.1.0
 fonttools==4.28.2
 idna==3.3
 jmespath==0.10.0
@@ -12,6 +13,7 @@ numpy==1.21.4
 packaging==21.3
 pandas==1.3.4
 Pillow==8.4.0
+pymongo==4.0.1
 pyparsing==3.0.6
 python-dateutil==2.8.2
 pytz==2021.3
